# deezhttp

./: .clang-format  .gitignore  README.md  meson.build  readme.md  test.txt
src/: buffer.c  buffer.h  deezhttp.c  error.c  error.h  header.c  header.h  lexer.c  lexer.h  memutils.h  parser.c  parser.h  result.h  stream.c  utils.h
subprojects/: libuv.wrap
